# hbit

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cli.py  prestart.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
common/: README.md  dto.py  requests.py  utils.py
hbit/: README.md  __init__.py  bootstrap.py  cli.py  clients.py  config.py  core.py  device_security.py  dto.py  enums.py  evaluations.py  extractors.py  models.py  nodes.py  summaries.py  tools.py  types.py  ui.py  utils.py
hbit/bootstrap/: __init__.py  bootstrap.py  model_factory.py  service_factory.py  vector_db_factory.py
hbit/corpus/: cli.py  datasets.py  vector_services.py
hbit/endpoints/: __init__.py  agents.py  chains.py  graphs.py  sequences.py
hbit/evaluations/: __init__.py  base.py  device_evaluations.py  patch_evaluations.py
hbit/extractors/: __init__.py  base.py  device_extractors.py  patch_extractors.py
hbit/notebooks/: agents.ipynb  chains.ipynb  extractors.ipynb  graphs.ipynb  sequences.ipynb  vector_db.ipynb
hbit/prompting/: __init__.py  anthropic_prompting.py  base.py  chat_prompting.py  examples.py  general_prompting.py
hbit/services/: __init__.py
hbit/tests/: test_datasets.py
hbit/ui/: cb_utils.py  security_agent.py  security_graph.py
hbit_api/: README.md  __init__.py  bootstrap.py  cli.py  errors.py  main.py  utils.py
hbit_api/adapters/: email_sender.py  orm.py  repository.py
hbit_api/alembic/: env.py
hbit_api/alembic/versions/: 1ad910088ec4_patch.py  269c1385ab66_devices.py  3811ee450117_initial.py  8c052e09b7fb_initial.py  bbadd04c8ab6_patch.py  e40739d0447d_released.py  f33b621cdd08_patches.py  ff0098f5647a_initial.py
hbit_api/api/: deps.py  main.py
hbit_api/api/routes/: books.py  devices.py  evaluations.py  login.py  users.py  utils.py  vuls.py
hbit_api/core/: config.py  db.py  security.py
hbit_api/domain/: commands.py  events.py  model.py  models.py
hbit_api/domain/dto/: devices.py  evaluation.py  users.py  vuls.py
hbit_api/scripts/: backend_pre_start.py  tests_pre_start.py
hbit_api/service_layer/: handlers.py  messagebus.py  protocols.py  unit_of_work.py
hbit_api/tests/: conftest.py
hbit_api/tests/api/routes/: test_login.py  test_users.py
hbit_api/tests/crud/: test_user.py
hbit_api/tests/fakes/: email_sender.py  handlers.py  models.py  repository.py  unit_of_work.py
hbit_api/tests/integration/: conftest.py  test_messagebus.py  test_repository.py  test_unit_of_work.py
hbit_api/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
hbit_api/tests/unit/: conftest.py  test_handlers.py
hbit_api/tests/utils/: user.py  utils.py
hbit_api/views/: evaluation.py  users.py  vuls.py
hbit_data/: README.md  __init__.py  cli.py  clients.py  config.py  dto.py  enums.py  normalizer.py  pipelines.py  processors.py  requests.py  utils.py
hbit_data/data/: scraped_capecs.json  scraped_cwes.json  scraped_iphones.json  scraped_patches.json
hbit_data/scrapers/: __init__.py  base.py  capecs.py  cves.py  cwes.py  iphones.py  patches.py  security_updates.py
hbit_data/scripts/: download_capecs.sh  download_cwes.sh  run_scrapers.sh
hbit_data/tests/: test_normalizer.py  test_processors.py  test_requests.py
